# create-github-project

./: .coveragerc  .gitignore  .versionrc.json  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  package-lock.json  package.json  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: coverage-report.yml  do-release.yml  major-release-request.yml  minor-release-request.yml  patch-release-request.yml  run-test-on-pr.yml  run-test.yml
release/: .versionrc.json  CHANGELOG.md  package-lock.json  package.json
src/create_github_project/: __main__.py  accounts.py  cli.py  resource_manager.py
src/create_github_project/assets/: __init__.py  asset.py  asset_manager.py
src/create_github_project/commands/: __init__.py  init.py
src/create_github_project/commands/accounts/: __init__.py  _list.py  add.py  drop.py
src/create_github_project/commands/init/: cmd.py  (+1 more)
src/create_github_project/manifest/: __init__.py  assets_section.py  inputs_section.py  manifest_parser.py
src/create_github_project/resource_manager/: __init__.py  _resource_manager.py
src/create_github_project/utils/: __init__.py  accounts.py  click_callbacks.py  utility_fn.py
tests/: conftest.py
tests/assets/: test_asset_manager.py
tests/commands/: test_accounts.py  test_init.py  test_versions.py
tests/commands/parameters/: test_checkbox.py  test_parameter_parser.py  test_reviewers.py  test_select.py
tests/manifest/: test_assets_section.py  test_inputs_section.py  test_manifest_parser.py
tests/utils/: test_accounts_class.py  test_click_callbacks.py  test_utility_fn.py
(+41 files in other folders)
