[metadata]
name = create_github_project
version = 0.0.0
description = GitHub project initializer

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.7, <4
install_requires=
    GitPython >= 3.1, <4
    Click >= 8.0, <9
    questionary >=1.10, <2
    Jinja2 >=3.0, <4

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    create_github_project = create_github_project.__main__:main
