[metadata]
name = create-github-project
version = attr: create_github_project.__version__
description = GitHub project initializer

[options]
zip_safe = False
package_dir =
    =src
packages = find:
python_requires = >=3.7, <4
install_requires=
    GitPython >= 3.1, <4
    Click >= 8.0, <9
    questionary >=1.10, <2
    Jinja2 >=3.0, <4
    PyGithub >=1.55, <2
    PyYAML >=5.4, <6
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    create-github-project = create_github_project.__main__:main
